--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -30,6 +30,15 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Prepare web files
+      run: |
+        mkdir -p www
+        cp index.html www/
+        cp style.css www/
+        cp app.js www/
+        cp manifest.json www/
+        cp i18n.js www/ 2>/dev/null || true
+
     - name: Add Android platform
       run: npx cap add android
 
