--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "license": "MIT",
     "dependencies": {
         "@capacitor/android": "^6.0.0",
-        "@capacitor/core": "^6.0.0"
+        "@capacitor/core": "^6.0.0",
+        "@capacitor/status-bar": "^6.0.0"
     },
     "devDependencies": {
         "@capacitor/cli": "^6.0.0"
