--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -36,8 +36,8 @@ jobs:
         cp index.html www/
         cp style.css www/
         cp app.js www/
+        cp i18n.js www/
         cp manifest.json www/
-        cp i18n.js www/ 2>/dev/null || true
 
     - name: Add Android platform
       run: npx cap add android
@@ -55,8 +55,18 @@ jobs:
       working-directory: android
       run: ./gradlew assembleDebug
 
+    - name: Build Release APK
+      working-directory: android
+      run: ./gradlew assembleRelease
+
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: focusflow-debug
         path: android/app/build/outputs/apk/debug/app-debug.apk
+
+    - name: Upload Release APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: focusflow-release
+        path: android/app/build/outputs/apk/release/app-release-unsigned.apk
